--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
+/******************** EXERCISE 1 ********************/
 .box {
   padding: 30px;
 }
 
 .button {
   background-color: transparent;
-  color: white;
   border-style: none;
   border-radius: 10px;
   margin: 5px;
   width: 150px;
   height: 75px;
   padding: 0;
-  outline-style: auto;
 }
 
 .button-background {
   background-color: #0073df;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,9 +35,11 @@
   transform: scale(1.25);
 }
 
+
+/******************** EXERCISE 2 ********************/
 .push:active .button-background {
   transition: transform 150ms;
-  transform: scale(0.75);
+  transform: scale(0.90);
 }
 
 .modal {
@@ -47,7 +49,7 @@
 .modal[open] {
   --offset-y: 100px;
   animation-name: slide-down, fade-in;
-  animation-duration: 1000ms;
+  animation-duration: 300ms;
   animation-timing-function: ease-out;  
   animation-fill-mode: forwards;
 }
@@ -62,7 +64,7 @@
 .modal[closing] {
   --offset-y: 100px;
   animation-name: slide-up, fade-out;
-  animation-duration: 500ms;
+  animation-duration: 300ms;
   animation-timing-function: ease-out;  
 }
 
@@ -118,5 +120,48 @@
   to {
     opacity: 0;
     display: none;
+  }
+}
+
+/******************** EXERCISE 3 ********************/
+.dropbtn {
+  border-style: none;
+  width: 250px;
+  height: 50px;
+  background-color: darkgrey;
+}
+
+.dropdown-menu {
+  display: none;
+}
+
+.menu-item {
+  display: grid;
+  place-content: center;
+  background-color: grey;
+  width: 250px;
+  height: 50px;
+}
+
+.dropdown-menu.open {
+  animation-name: expand;
+  animation-duration: 1000ms;
+  animation-timing-function: ease-out;
+}
+
+@keyframes expand {
+  from {
+    transform: scaleY(0);
+    transform-origin: top;
+  }
+
+  80% {
+    transform: scaleY(1.05);
+    transform-origin: top;
+  }
+
+  to {
+    transform: scaleY(1);
+    transform-origin: top;
   }
 }
